[package]
name = "dotecnf"
version = "0.1.0"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
edition = "2018"
categories = ["config", "filesystem"]
keywords = ["dot file", "setting", "cnf", "config"]
license = "MIT"
description = "loader for \".ecnf\" file such as \".env\". \".ecnf\" is key-value setting file with key's hierarchy."
readme = "README.md"
repository = "https://github.com/ogata-k/dotecnf/tree/master"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
